  * Added FileUtils CreateFileWithContentAsync()
  * Added commandline argument helper to escape strings
  * Added IComparer extension methods Reverse() and Then(); the latter allowing them to be composed like Chain of Responsibility
  * Added object extension GetObjectElements()
  * Unseal ReadOnlyCollection, ReadOnlyList, ReadOnlyDictionary

AllOverIt.Aws.Cdk.Appsync
  * Updated to Amazon.CDK.AWS.AppSync v1.198.1

AllOverIt.AutoFixture
  * Updated AutoFixture v4.18.0

AllOverIt.AutoFixture.FakeItEasy
  * Updated AutoFixture.FakeItEasy v4.18.0

AllOverIt.DependencyInjection
  * Added support for registering named services

AllOverIt.EntityFrameworkCore
  * Updated Microsoft.EntityFrameworkCore.Relational v7.0.4 (NET7)

AllOverIt.EntityFrameworkCore.Diagrams
  * New package. Adds support for generating D2 entity relationship diagrams and exporting to text, svg, png, pdf.

AllOverIt.Fixture
  * Added exception assertion helpers
  * Updated FluentAssertions v6.10.0

AllOverIt.Fixture.FakeItEasy
  * Updated FluentAssertions v6.10.0

AllOverIt.GenericHost
  * Updated Microsoft.Extensions.Hosting v7.0.1

AllOverIt.Serialization.JsonAbstractions
  * Renamed from AllOverIt.Serialization.Abstractions

AllOverIt.Serialization.JsonHelper
  * Renamed from AllOverIt.Serialization

AllOverIt.Serialization.SystemTextJson
  * Added an option to NestedDictionaryConverter so floating values can be read as double or decimal.

AllOverIt.Serialization.Newtonsoft
  * Updated Newtonsoft.Json v13.0.3

AllOverIt.Pagination
  * Added GetPageResults() extension method for IQueryPaginator<TResult> - intended ONLY for memory based queries. Performs the
    same job as GetPageResultsAsync() found in AllOverIt.EntityFrameworkCore.Pagination.

AllOverIt.ReactiveUI
  * Added support for a ReactiveCommand based pipeline (with support for chaining other sync / async pipeline steps)
  * Updated ReactiveUI v18.4.26

AllOverIt.Validation
  * Updated FluentValidation v11.5.1
